[package]
name = "tlmcmddb-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.0.29", features = ["derive"] }
tlmcmddb = "0.1.0"
tlmcmddb-csv = "0.1.0"
serde_json = "1"
