[package]
name = "tlmcmddb-cli"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "C2A TlmCmd DB utility"
repository = "https://github.com/arkedge/c2a-tlmcmddb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.3.0", features = ["derive"] }
tlmcmddb = "0.2.0"
tlmcmddb-csv = "0.2.0"
serde_json = "1"
