[package]
name = "tlmcmddb-cli"
version.workspace = true
edition = "2021"
license = "MIT"
description = "C2A TlmCmd DB utility"
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.4.11", features = ["derive"] }
tlmcmddb = "2.5"
tlmcmddb-csv = "2.5"
serde_json = "1"
