[package]
name = "tlmcmddb-csv"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
csv = "1.1.6"
tlmcmddb = "0.1.0"
serde = { version = "1.0.150", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
