[package]
name = "tlmcmddb-csv"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "C2A TlmCmd DB CSV parser"
repository = "https://github.com/arkedge/c2a-tlmcmddb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
csv = "1.2.1"
tlmcmddb = "0.2.0"
serde = { version = "1.0.160", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
