[package]
name = "tlmcmddb-csv"
version.workspace = true
edition = "2021"
license = "MIT"
description = "C2A TlmCmd DB CSV parser"
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
csv = "1.3.0"
tlmcmddb = "2.5.0"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
