[package]
name = "tlmcmddb"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "C2A TlmCmd DB data model"
repository = "https://github.com/arkedge/c2a-tlmcmddb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
